REBRAND: Updated to Handsome Gato Incorporated
 COMPLETE BRANDING UPDATE:
- Updated all page titles to 'Handsome Gato Incorporated'
- Changed navigation logo to 'Handsome Gato Inc.'
- Updated main headers and company references
- Modified meta descriptions and SEO tags
- Updated README, Executive Summary, and Project Plan
- Changed _config.yml for Jekyll/GitHub Pages

 CONSISTENCY ACROSS ALL PAGES:
- Home page: Full company name in header
- About: Company mission and story updated
- Services: Professional service offerings
- Portfolio: Client work and testimonials
- Contact: Business contact information
- Pricing: Professional pricing packages

 DOCUMENTATION UPDATED:
- README.md: Company name and description
- EXECUTIVE_SUMMARY.md: Executive overview
- HANDSOME_GATO_FOUNDATION_PROJECT_PLAN.md: Project roadmap
- PUBLISHED.md: Publishing confirmation
- PUBLISHING_GUIDE.md: Deployment instructions
- _config.yml: Jekyll configuration

Now fully branded as Handsome Gato Incorporated!

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Handsome Gato Foundation</title>
-    <meta name="description" content="Learn about Handsome Gato Foundation's mission, team, and approach to WordPress development and digital marketing excellence.">
+    <title>About - Handsome Gato Incorporated</title>
+    <meta name="description" content="Learn about Handsome Gato Incorporated's mission, team, and approach to WordPress development and digital marketing excellence.">
     <link rel="stylesheet" href="styles.css">
     <style>
         * {
@@ -162,7 +162,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">🐱 Handsome Gato</a>
+            <a href="index.html" class="logo">🐱 Handsome Gato Inc.</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
@@ -177,13 +177,13 @@
 
     <div class="container">
         <header class="page-header">
-            <h1>About Handsome Gato Foundation</h1>
+            <h1>About Handsome Gato Incorporated</h1>
             <p>Building digital foundations for sustainable business growth</p>
         </header>
 
         <div class="content">
             <h2>🎯 Our Mission</h2>
-            <p>At Handsome Gato Foundation, we specialize in creating comprehensive digital foundations that drive sustainable business growth. Our expertise lies in WordPress development, digital marketing, and strategic business solutions that help our clients achieve their ambitious revenue goals.</p>
+            <p>At Handsome Gato Incorporated, we specialize in creating comprehensive digital foundations that drive sustainable business growth. Our expertise lies in WordPress development, digital marketing, and strategic business solutions that help our clients achieve their ambitious revenue goals.</p>
 
             <h3>🚀 Our Approach</h3>
             <p>We believe in building more than just websites – we create digital ecosystems that serve as the foundation for long-term business success. Our comprehensive approach combines cutting-edge technology with proven business strategies.</p>
@@ -219,7 +219,7 @@
                 </div>
             </div>
 
-            <h3>💡 Why Choose Handsome Gato?</h3>
+            <h3>💡 Why Choose Handsome Gato Incorporated?</h3>
             <ul style="margin: 20px 0; padding-left: 20px;">
                 <li><strong>Proven Methodology:</strong> Our systematic approach to digital foundation building</li>
                 <li><strong>Revenue-Focused:</strong> Every decision is made with your business growth in mind</li>
