--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Handsome Gato Foundation</title>
-    <meta name="description" content="Get in touch with Handsome Gato Foundation for your WordPress development and digital marketing needs.">
+    <title>Contact - Handsome Gato Incorporated</title>
+    <meta name="description" content="Get in touch with Handsome Gato Incorporated for your WordPress development and digital marketing needs.">
     <style>
         * {
             margin: 0;
@@ -249,7 +249,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">🐱 Handsome Gato</a>
+            <a href="index.html" class="logo">🐱 Handsome Gato Inc.</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
