--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - Handsome Gato Foundation</title>
-    <meta name="description" content="Professional WordPress development, digital marketing, and business growth services from Handsome Gato Foundation.">
+    <title>Services - Handsome Gato Incorporated</title>
+    <meta name="description" content="Professional WordPress development, digital marketing, and business growth services from Handsome Gato Incorporated.">
     <style>
         * {
             margin: 0;
@@ -237,7 +237,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">🐱 Handsome Gato</a>
+            <a href="index.html" class="logo">🐱 Handsome Gato Inc.</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
