--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Handsome Gato Foundation</title>
+    <title>Portfolio - Handsome Gato Incorporated</title>
     <meta name="description" content="View our WordPress development portfolio showcasing successful projects and client results.">
     <style>
         * {
@@ -233,7 +233,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">🐱 Handsome Gato</a>
+            <a href="index.html" class="logo">🐱 Handsome Gato Inc.</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
