--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pricing - Handsome Gato Foundation</title>
+    <title>Pricing - Handsome Gato Incorporated</title>
     <meta name="description" content="Transparent pricing for WordPress development, digital marketing, and business growth services.">
     <style>
         * {
@@ -301,7 +301,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">🐱 Handsome Gato</a>
+            <a href="index.html" class="logo">🐱 Handsome Gato Inc.</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
